--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,8 @@
+@import "aos/dist/aos.css";
+@import "glightbox/dist/css/glightbox.min.css";
+@import "swiper/swiper-bundle.css";
+
+
 /*--------------------------------------------------------------
 # Font & Color Variables
 # Help: https://bootstrapmade.com/color-system/
